Updated introduction and first part of methods

--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -72,39 +72,41 @@ suppressPackageStartupMessages({
 
 # Introduction
 
-Overfishing and unsustainable fishing practices are some of the major threats to the conservation of marine ecosystems around the world [@pauly_2005-qV; @halpern_2008-dK]. Marine Protected Areas (MPAs) are frequently proposed as fishery management and conservation tools to help fish stocks rebound [@lester_2008-F_; @lester_2009-Ks: @sala_2016-PV] by limitting or restricting fishing effort and gears. No-take marine reserves (marine reserves hereinafter) are a particular type of MPAs, where all fishing effort and extractive activities are off-limits or highly regulated. The International Union for the Conservation of Nature [-@iucn_website_2017-Bg] categorizes them as Ia (Strict Natural Reserves) or Ib (Wilderness Areas). However, see [@hortaecosta_2016-_3] for a detailed regulation-based classification system.
-    
-MPAs have proven to increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience of the bounded region [@micheli_2012-EU], and preserve genetic diversity [@munguavega_2015-yg]. Compared to partially protected MPAs, marine reserves are known to have even higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_]. Often, these effects are meassured as biological changes in the area through time and lack a control site against which to compare [@betti_2017-lq]. This before-after comparison ignores other factors for which one must control [@davies_2017-ml], impeding us to talk about causation with complete certainty. While some studies have used control sites, their analyses do not estimate the net effect of the reserve, and often use a control-impact comparison approach [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies use measurements of some biological atribute of a reserve and control sites before and after the implementation of the reserves, thus having a before-after-control-impact design [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], allowing them to use causal inference techniques that estimate the net effect of the reserve.
+Overfishing and unsustainable fishing practices are two of the largest threats to the conservation of marine ecosystems around the world [@pauly_2005-qV; @halpern_2008-dK]. Marine Protected Areas (MPAs) are frequently proposed as fishery management and conservation tools to help fish and invertebrate stocks recover [@lester_2008-F_; @lester_2009-Ks: @sala_2016-PV] by limiting or restricting fishing effort and gears. No-take marine reserves (marine reserves hereinafter) are a particular type of MPA, where all fishing effort and extractive activities are off-limits [-@iucn_website_2017-Bg; @hortaecosta_2016-_3].
 
-As with any other policy intervention, it is important that we can measure its effect in order to adapt and learn. The diversity of approaches currently used to evaluate the effect of marine reserve often does not answer the simplest question: What is the net effect of the marine reserve? This highlights the need to develop standardized approaches that enable us to truly evaluate the effect of the intervention. Furthermore, while biophysical aspects are important to reserve success, the effectiveness of reserves also depends on the socioeconomic status and governance system of the local fishing community [@basurto_2013-oq; @basurto_2012-Mz], dimensions often ignored. By excluding these important dimensions. the evaluation provides just a partial picture of the state of the reserve. Currently, only the IUCN framework "How to evaluate your MPA" [@pomeroy_2005-Py; @pomeroy_2004-23] provides a comprehensive list of biophysical, socioeconomic, and governance indicators, and insight into how these indicators may be measured, but does not provide guidelines on how to analyse them. A more recent work by @mascia_2017-m_ integrates these three dimensions and uses causal inference techniques to provide a measure of the effect of implemented an MPA. However, these two certainly novel approaches do not provide a user-friendly tool that enable replicability ans scalability of the analysis.
+Empirical studies have shown that MPAs increase biomass [@aburtooropeza_2011-ya; @lester_2009-Ks], enhance resilience to climatic impacts [@micheli_2012-EU; @roberts_2017-J9], and preserve genetic diversity [@munguavega_2015-yg]. Compared to partially protected MPAs, marine reserves are known to have even higher levels of biomass, density, richness, and larger organisms [@lester_2008-F_; @edgar_2014-UO]. These effects are often measured as biological changes in the area through time and lack a control site against which to compare [@betti_2017-lq]. This before-after comparison cannot account for other factors for which one must control [@davies_2017-ml] in order to attribute biological change to protection in the reserves. While some studies have used control sites, these analyses do not estimate the net effect of the reserve, and often use a control-impact comparison approach that does not address temporal variability [@guidetti_2014-8Z; @friedlander_2017-oI; @lester_2009-Ks; @aburtooropeza_2011-ya; @rodriguez_2017-PD]. A smaller fraction of studies have used a before-after-control-impact design comparing reserves to control sites before and after implementation [@moland_2013-VP; @soykan_2015-nu; @lester_2009-Ks], which allows the use of causal inference techniques that estimate the effect of the reserve.
 
-An increasingly popular way to mace science reproducible, scalable and replicable is through Open science and the development of tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, has succesfully standardized a way to measure the health and benefits of the oceans. This has been implemented at global scales, but also at country-level [@selig_2015-F9], and regional scales [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance indicators [@anderson_2015-ND], design territorial use rights for fisheries [TURFs; @oyanedel_2017-TO], or to improve decision making in the hydropower industry [@vilela_2017-Zo], just to list a few.
-    
-The lack of a comprehensive framework -or the complexity of existing ones, which alienate non-experts- and user-friendly tools to evaluate the effectiveness of marine reserves calls for the development of a new framework and tool. Here, we present a framework to evaluate no-take marine reserves, which incorporates the biological, socioeconomic, and governance dimensions of these conservation areas. We provide a list of commonly stated management objectives, and match them to appropriate indicators that meassure the effectiveness of the management intervention. We include a simple approach to analyze these indicators, building on causal inference techniques [@moland_2013-VP], largely needed to truly understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. We also introduce the Marine Reserve Evaluation App (MAREA), an open source web-based tool that automates the framework described in this paper. To demonstrate the potential of MAREA, we perform an evaluation of marine reserve established by fishers from Isla Natividad, Mexico in 2006.
+As with any other policy intervention, it is important that we can measure its effect in order to adapt and learn [@ferraro_2006-oW; @burgess_2016-HN]. The diversity of approaches currently used to evaluate the effect of marine reserves often does not answer the simple question: *What is the effect of a marine reserve on a given attribute?* This gap highlights the need to develop standardized approaches that enable us to evaluate the net effect of the intervention (*i.e.* causes of conservation outcomes; @ferraro_2006-oW). Furthermore, while biological aspects are important to reserve success, effectiveness also depends on the socioeconomic status and governance system of the local fishing communities [@basurto_2013-oq; @basurto_2012-Mz], which are often ignored. By excluding these important dimensions, the evaluation provides only a partial picture of the impacts of the reserve. Currently, only the IUCN framework "How to evaluate your MPA" [@pomeroy_2005-Py; @pomeroy_2004-23] provides a comprehensive list of biological, socioeconomic, and governance indicators, and insights into how these indicators may be measured, but does not provide guidelines on how to analyze them. Recent work by @mascia_2017-m_ integrates these three dimensions and suggests the use of causal inference techniques to provide a measure of the effect of implementing an MPA. However, these two novel approaches do not provide a user-friendly tool that enables replicability and scalability of the analysis, particularly when used by the fishers and decision makers themselves.
+
+An increasingly popular way to make science reproducible, scalable and replicable is through Open Science and the development of open-access tools [@lowndes_2017-xh]. The Ocean Health Index [@halpern_2012-k9; @halpern_2017-Zi], for example, has successfully standardized a way to measure the health and benefits of the oceans. This approach has been implemented at global scales, but also at country-level [@selig_2015-F9], and regional scales [@halpern_2014-lQ; @elfes_2014-RC]. Open access tools are not limited to conservation, and have also been developed to evaluate fishery performance [@anderson_2015-ND; @dowling_2016-pO], design territorial use rights for fisheries (TURFs; @oyanedel_2017-TO), and improve decision making in the hydropower industry [@vilela_2017-Zo], just to list a few.
+
+The lack of a comprehensive framework and user-friendly tools to evaluate the effectiveness of marine reserves ---or the complexity of existing ones, which alienate non--experts--- calls for the development of a new framework and tool. The current work presents a framework to evaluate marine reserves, which incorporates the biological, socioeconomic, and governance dimensions of these areas. We first provide a list of commonly stated management objectives and match them to appropriate indicators that measure the effectiveness of the management intervention. We then include a simple approach to analyzing these indicators building on causal inference techniques [@moland_2013-VP], which help us understand the effect of management interventions [@burgess_2016-HN; @mascia_2017-m_]. We also introduce the Marine Reserve Evaluation App (MAREA), an open source web--based tool that automates the framework described in this paper and enables its broader use. Finally, we present a case study on the evaluation of a marine reserve established by the fishers of Isla Natividad (Mexico) in 2006, to demonstrate the potential of MAREA.
 
 \clearpage
 
 # Materials and methods
 
-Here, we describe the proposed framework to evaluate the effectiveness of marine reserves (**Fig. 1**). We explain how management objectives were identified and matched to appropriate indicators that allow the evaluation of the reserves, and provide brief guidelines on data collection. Alongside, methodologies to analyze these indicators are presented. Then, we describe the development of MAREA and eplain how this user-friendly open access tool can be used by anyone. Finally, we provide guidelines on how to interpret the results and output generated by MAREA.
+Here, we describe the proposed framework to evaluate the effectiveness of marine reserves (Fig. 1). We explain how management objectives were identified and matched to appropriate indicators that allow the evaluation of the reserves, and provide brief guidelines on data collection. Alongside, methodologies to analyze these indicators are presented. Then, we describe the development of MAREA and explain how this user-friendly open access tool can be used by anyone. Finally, we provide guidelines on how to interpret and use the results and output generated by MAREA.
 
-![Workflow to evaluate the effectiveness of no-take marine reserves.](./Figures/flowchart.gif){ width=50% }
+![Workflow to evaluate the effectiveness of marine reserves.](./Figures/flowchart.gif){ width=50% }
 
-## Reserve objectives and indicators
+## Marine Reserve objectives and indicators
 
-Throughout this work, we will refer to the stated goals for which a reserve was designed as objectives. Given that this work was motivated by the need to provide a framework to evaluate Mexican marine reserves, or focus was on identifying objectives of marine reserves in Mexico. However, we group these objectives into seven major categories, which can be applied to other conservation areas in the world. The list of objectives was gathered through a literature review from the reserves’ stated objectives in official documents such as the Technical Justification Studies (*Estudios Tecnicos Justificativos*), agreements, decrees, and specific legislation [@nom049sagpesc_2014-V6] associated to these areas. Even though each reserve has its own goals, seven main categories of objectives were identified:
 
-1. Avoid overexploitation
-2. Conserve species under a special protection regime
-3. Maintain biological process (reproduction, recruitment, growth, feeding)
-4. Improve fishery production in nearby waters
-5. Preserve biological diversity and the ecosystem
-6. Recover overexploited species
-7. Recover species of economic interest
 
-Based on these seven objectives, we determined a set of indicators to evaluate the effectiveness. The list of indicators was built through a review of scientific literature, where we identified indicators that were used to measure similar objectives. A first filter eliminated indicators for which baseline data does not exist, or for which data aquisition was expensive or outside of the general scope. The initial list of indicators was reviewed at a workshop with participation of members from Mexican fishery management agencies and non-government organizations. Later, these were also presented to fishers from the Ensenada Fishing Cooperative (*S.C.P.P. Ensenada*), which provided input. Our final list of indicators includes, at least, those identified in review works such as @lester_2009-Ks or @woodcock_2017-Wm.
+Throughout this study, we will refer to the stated goals for which a marine reserve was designed as objectives. This work was motivated by the need to provide a framework to evaluate Mexican marine reserves. Thus, our focus was on identifying common objectives of marine reserves in Mexico. However, we group these objectives into seven major categories, which can be applied to marine reserves worldwide. The list of objectives was developed through a literature review, which compiled stated objectives in and legislation [@nom049sagpesc_2014-V6; @lgeepa_2017-jL] and official documents such as the Technical Justification Studies (*Estudios Tecnicos Justificativos*), agreements, and decrees associated to these areas. Even though each reserve has its own goals, seven main categories of objectives were identified:
 
-Indicators are divided into three main categories: biophysical, socioeconomic, and governance. Biophysical indicators (n = 7) focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data section for specific sampling design and methodologies). Socioeconomic indicators (n = 3) reflect the performance of the fishery in terms of catches, income from catches, and availability of alternative livelihoods. Governance indicators (n = 15) describe the governance structures under which the community operates. These indicators may be numeric (*e.g.* Fish biomass) or descriptive (*e.g.* Reasoning for reserve location). Our list includes indicators that respond to the implementation of the reserve (*i.e.* outcome variables) or that might further the understanding of its performance. In that sense, most biophysical and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as explanatory variables that might explain reserve performance. Whenever an indicator is said to also be applied to “Objective species”, it means that the indicator can used for all species (*e.g.* Fish Biomass) and individual species that are either the conservation target of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). **Table 1** presents the proposed indicators, and **Table 2** shows how objectives are matched with indicators.
+1.	Avoid overexploitation
+2.	Conserve species under a special protection regime
+3.	Maintain biological process (reproduction, recruitment, growth, feeding)
+4.	Improve fishery production in nearby waters
+5.	Preserve biological diversity and the ecosystem
+6.	Recover overexploited species
+7.	Recover species of economic interest
+
+Based on these seven objectives, we determined a set of associated indicators to evaluate reserve effectiveness. The list of indicators was compiled through a review of scientific literature in which we identified indicators that were used to measure similar objectives. A first filter eliminated indicators for which baseline data do not typically exist in Mexico. The preliminary list of indicators was reviewed at a workshop with participation of members from Mexican fishery management agencies and non-government organizations. Later, these were also presented to fishers from the Ensenada Fishing Cooperative (*S.C.P.P. Ensenada*), in Baja California, who provided input. Our final list of indicators includes those identified in review works such as @lester_2009-Ks or @woodcock_2017-Wm.
+
+Indicators are divided into three main categories: biological, socioeconomic, and governance (Table 1). Biological indicators (n = 7) focus on fish and invertebrate communities that are evaluated using underwater ecological surveys performed inside and outside the reserve (see Data and Analysis section for specific sampling design and methodologies). Socioeconomic indicators (n = 3) reflect the performance of the fishery in terms of catches, income from catches, and availability of alternative livelihoods. Governance indicators (n = 15) describe the governance structures under which the community operates (*e.g.*, access rights to the fishery, number of fishers, legal recognition of the reserve). Indicators may be numeric (e.g. Fish biomass) or descriptive (*e.g.* Reasoning for reserve location). Our list includes indicators that respond to the implementation of the reserve (*i.e.* outcome variables) or that might further the understanding of its performance. In that sense, most biological and socioeconomic indicators are outcome variables. On the other hand, governance indicators are viewed as possible explanatory variables of reserve performance. Whenever an indicator is applied to “Target species”, it means that the indicator can be used for all species (*e.g.* Fish Biomass) and/or for individual species that are either the conservation target of the reserve or are of particular economic or ecological interest (*e.g.* Grouper Biomass). Table 1 presents the proposed indicators, and Table 2 shows how objectives are matched with indicators.
 
 \clearpage
 
