--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -134,25 +134,27 @@ read.csv("./Tables/Objectives_Indicators.csv") %>%
 
 ## Data and analyses
 
-Biophysical data is collected via underwater ecological surveys as part of a reserve's monitoring program, often carried out by local fishers with guidance of non-government organizations, such as Comunidad y Biodiversidad or Niparajá. Local fishers -trained in scientific diving- perform SCUBA dives to record fish and invertebrate richness and abundances, as well as fish total length. This information is recorded along 30 m transects, with a sampling window of 2 m X 2 m. Between 10 and 24 transects are performed in each site at depths between 1 and 30 m. Ecological surveys are performed yearly in each reserve and its corresponding control site(s), before and after the implementation of the reserve, allowing us to have a before-after-control-impact sampling design. Control sites are areas where habitat is similar to that of the reserve, but with presence of fishing activity.
+In many coastal marine reserves of Mexico, biological data are collected via underwater ecological surveys as part of a reserve's monitoring program, often carried out by local fishers with guidance from Civil Society Organizations (CSOs). Scientific divers record fish and invertebrate richness and abundances, as well as fish total length along belt transects. Ecological surveys are performed yearly in each reserve and corresponding control site(s), before and after the implementation of the reserve, allowing us to have a before-after-control-impact (*i.e.* BACI) sampling design. Control sites are areas where habitat is similar to that of the reserve, but with presence of fishing activity. While transect dimensions (i.e. length and width) and sampling methods might vary from study to study, the general idea remains the same: richness, abundances, and sizes of organisms are recorded in a study-specific standardizes way. For this reason, MAREA does not assume specific transect dimensions, and pertinent indicators are calculated per transect (Table 1).
 
-Having control sites for biophysical data allows us to use counterfactual approaches to evaluate the net effect of the reserve. The hypothesis that the indicators will respond the the implementation of the reserve is tested by analysing spatial and temporal changes in each numeric biophysical indicator (all but B5) using generalized linear models [@moland_2013-VP]. To account for variations in the environment and survey conditions, covariates that are gathered during the underwater ecological surveys are included into a model with form:
+Having control sites for biological data allows us to use causal inference techniques [@moland_2013-VP; @ferraro_2006-oW] to evaluate the net effect of the reserve. The hypothesis that the indicators will respond to implementation of the reserve is tested by analyzing spatial and temporal changes in each numeric biological indicator (all but B5) using generalized linear models [@moland_2013-VP]. To account for variations in the environment and survey conditions, covariates that are gathered during the underwater ecological surveys are included into a model with form:
 
 \begin{equation}I_{i,t,z}=\beta_0 + \sum_{t = 2}^T\gamma_{i,t}Y_t + \beta_1Z_{i,z} + \beta_2P_{i,t,z}\times Z_{i,t,z} + \beta_3T_{i,t,z} + \beta_4V_{i,t,z} + \beta_5D_{i,t,z} + \epsilon_{i,t,z}\end{equation}
 
-In this model, $i$, $t$, and $z$ are subindices for transect, time, and zone (control or reserve site), respectively. This model allows us to estimate the change in an indicator ($I$) based on the year ($Y$), a dummy variable that indicates tratment ($Z$; *i.e.* control o reserve), an interaction between a dummy variable that indicates pre- or post-implementation ($P$) and treatment ($Z$), and covariates such as bottom temperature ($T$; in °C), horizontal visibility during the survey ($V$; in m), and depth at which survey was performed ($D$; in m). $\epsilon$ represents the error term associated to the equation. Here, years are modeled as factors, using the first year as the reference level. By modelling years as factors, we avoid overimposing a linear structure in the way an indicator changes through time (*i.e.* the change in biomass between 2000 and 2001 does not have to be the same as the change between 2006 an 2007). The treatment and post variables, modeled as dummy variables, are coded as Control = 0 and Reserve = 1; and Pre-implementation = 0 and Post-implementation = 1, respectively.
+In this model, $i$, $t$, and $z$ are subindices for transect, time, and zone (control or reserve site), respectively. This model allows us to estimate the change in an indicator ($I$) based on the year ($Y$), a dummy variable that indicates treatment ($Z$; *i.e.* control or reserve), an interaction between a dummy variable that indicates pre-- or post--implementation ($P$) and treatment ($Z$), and covariates such as bottom temperature ($T$; in °C), horizontal visibility during the survey ($V$; in m), and depth at which survey was performed ($D$; in m). $\epsilon$ represents the error term associated to the equation. Here, years are modeled as factors, using the first year as the reference level. By modelling years as factors, we avoid imposing a linear structure in the way an indicator changes through time (*i.e.* the change in biomass between 2006 and 2007 does not have to be the same as the change between 2015 and 2016). The treatment and implementation variables, modeled as dummy variables, are coded as Control = 0 and Reserve = 1; and Pre-implementation = 0 and Post-implementation = 1, respectively.
 
-Socioeconomic data is often collected by fishers or fishery management agencies, which record landings, income, and sometimes prices for each species. In order to control for inflation and changes in buying power, income is adjusted with the countries consumer price index:
+Socioeconomic data are often collected by fishers, fishery management agencies or OSCs by recording landings, income, and sometimes prices for each species. To control for inflation and changes in buying power, income is adjusted with the country’s consumer price index [@oecd_website_2017-VV]:
 
 \begin{equation}I_t = RI\times \frac{CPI_t}{CPI_T}\end{equation}
 
-Where $I_t$ represents the adjusted income for year $t$ as the product between the reported income for that year and the ratio between the consumer price index ($CPI$) in that year to the most recent year's ($T$) CPI. Since no control sites are available, numeric socioeconomic indicators (G1 and G2) are evaluated with a simplified version of *eq. 1*:
+Where $I_t$ represents the adjusted income for year $t$ as the product between the reported income for that year and the ratio between the consumer price index ($CPI$) in that year to the most recent year’s ($T$) CPI. Since no control sites are typically available for this data type, numeric socioeconomic indicators (G1 and G2) are evaluated with a simplified version of eq. 1:
 
 \begin{equation}I_{t}=\beta_0 + \beta_1P_{t} + \epsilon_{t}\end{equation}
 
-While this model does not allow assertion of a causal relation, we can still measure changes in mean landings and income before and after the implementation of the reserve and provide valuable input. For both models (**eq. 1** and **eq. 3**), coefficients are estimated via ordinary least squares, and heteroskedastik-robust standard errors are calculated.
+While this model does not allow establishing a causal relation, we can still measure changes in mean landings and income before and after the implementation of the reserve and provide valuable input. For both models (eq. 1 and eq. 3), coefficients are estimated via ordinary least squares, and heteroskedastic-robust standard errors are calculated.
 
-Governance data, however, is not readily available nor systematically collected by the community or any other organizations. In this case, we created a survey specifically designed to collect information needed for the proposed indicators (B5, S3, and G1-G15). The survey is included as supplementary material (**Appendix 1**). To analyze governance information, we performed a literature review of common governance structures and ther relation to effectiveness in managing fisheries or marine reserves. These approach has prooven to succesfuly allow the evaluation of governance structures [@espinosaromero_2014-PY]. Governance information is not analyzed in a quantitative way, but is presented along with the biophysical and socioeconomic indicators to provide managers and users with a full description of the reserve.
+Governance data are not readily available nor systematically collected by the community or other organizations. Therefore, we created a survey specifically designed to collect information needed for the proposed indicators (B5, S3, and G1-G15). The survey is included as supplementary material (Appendix 1). To analyze governance information, we develop a framework based on a literature review of common governance structures and their relation to effectiveness in managing fisheries or marine reserves (Appendix 2). This approach has been proven to successfully evaluate governance structures [@espinosaromero_2014-PY]. Governance information is not quantitatively analyzed, but it is presented along with the biological and socioeconomic indicators to provide managers and users with a more complete description of the reserve.
+
+**ME QUEDÉ AQUí**
 
 ## Marine Reserve Evaluation App (MAREA)
 
