Modifique seccion del case study

--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -93,8 +93,6 @@ Here, we describe the proposed framework to evaluate the effectiveness of marine
 
 ## Marine Reserve objectives and indicators
 
-
-
 Throughout this study, we will refer to the stated goals for which a marine reserve was designed as objectives. This work was motivated by the need to provide a framework to evaluate Mexican marine reserves. Thus, our focus was on identifying common objectives of marine reserves in Mexico. However, we group these objectives into seven major categories, which can be applied to marine reserves worldwide. The list of objectives was developed through a literature review, which compiled stated objectives in and legislation [@nom049sagpesc_2014-V6; @lgeepa_2017-jL] and official documents such as the Technical Justification Studies (*Estudios Tecnicos Justificativos*), agreements, and decrees associated to these areas. Even though each reserve has its own goals, seven main categories of objectives were identified:
 
 1.	Avoid overexploitation
@@ -155,21 +153,19 @@ While this model does not allow establishing a causal relation, we can still mea
 
 Governance data are not readily available nor systematically collected by the community or other organizations. Therefore, we created a survey specifically designed to collect information needed for the proposed indicators (B5, S3, and G1-G15). The survey is included as supplementary material (Appendix 1). To analyze governance information, we develop a framework based on a literature review of common governance structures and their relation to effectiveness in managing fisheries or marine reserves (Appendix 2). This approach has been proven to successfully evaluate governance structures [@espinosaromero_2014-PY]. Governance information is not quantitatively analyzed, but it is presented along with the biological and socioeconomic indicators to provide managers and users with a more complete description of the reserve.
 
-**ME QUEDÉ AQUí**
-
 ## Marine Reserve Evaluation App (MAREA)
 
-MAREA was developed in R Studio [@rcore_2017] using the shiny framework [@shiny_2017], which provides the tools to build interactive web applications, hosted on an open server. MAREA can be accessed at [turfeffect.shinyapps.io/marea](turfeffect.shinyapps.io/marea/). While the original version was developed in spanish (aimed at Mexico and other Latinamerican countries), all its content can be translated by a translation widget availabe within the environment.
+MAREA was developed in R Studio [@rcore_2017] using the Shiny package [@shiny_2017], which provides the tools to build interactive web applications, hosted on an open server. MAREA can be accessed at [turfeffect.shinyapps.io/marea](turfeffect.shinyapps.io/marea/). While the original version was developed in Spanish because it was aimed for Mexico and other Latin-American countries, all of its content can be translated by a translation widget available within the app.
 
-MAREA is designed into a 6-step process, divided in tabs. The first tab provides an introduction to the app and an overview of the evaluation process. Then, the user selects management objectives, which MAREA automatically matches to appropriate indicators, based on **Table 2**. The user can then load the data, using standard \*.csv files; sample datasets are provided within MAREA. Once data have been loaded, MAREA identifies all reserves in the data, and lets the user select the reserve to be evaluated. At this point, the user can also specify the year of implementation of the reserve, and indicate objective species that are of particular management interest. Before presenting the results, MAREA provides the user with a section to confirm that all the decisions taken until then are correct. Finally, the user is taken to the results tab, where results can be viewed at a glance or downloaded as a technical report.
+MAREA is designed as a 6-step process, divided in tabs. The first tab introduces the app and summarizes the evaluation process. Then, the user selects management objectives, which MAREA automatically matches to appropriate indicators, based on Table 2. Users can also manually select additional indicators or unselect the default ones, based on their interests and data availability. The user can then load the data, using standard \*.csv text files; sample datasets are provided within MAREA. Once data have been loaded, MAREA identifies all reserves in the data (the uploaded dataset can contain data for more than one reserve), and lets the user select the reserve to be evaluated. At this point, the user can also specify the year of implementation of the reserve, reserve dimensions, and indicate target species that are of particular management interest. Before presenting the results, MAREA provides the user with a section to confirm that all the decisions made leading up to that point are correct. Finally, the user is taken to the results tab where they can be viewed in a simple format. The user can also download a more comprehensive technical report produced in \*.pdf format.
 
-The first result is a color-coded scorecard, intended to provide a general overview of the effectiveness of the reserve to a general public. The scorecard provides a global score for the reserve, a general score for each category of indicators, and an individual score for each indicator. The global and category-level scores are determined by the percentage of positive indicators, overall and for each category. For numeric biophysical indicators (all but B5), the color is defined by the sign of the interaction term coefficient ($\beta_2$) in *eq. 1*. For socioeconomic indicators, colors are assigned based on the direction of the slope ($\beta_1$). Red, yellow and green are used for $\beta_i<0$, $\beta_i = 0$, and $\beta_i>0$, respectively. The intensity of the color is defined by the significance of coefficient, testing the null hypothesis of no change (*i.e.* $H_0: \beta_i = 0$) with a Students t-test. Cutoff values are $p < 0.05$ and $p < 0.1$. Thus, even in a case where $\beta_i > 0$ if the coefficient is not significant (*i.e. * $p>0.1$) the indicator will be assigned a yellow color. A legend (**Fig. 2**) is provided within the scorecard to aid in the interpretation of these results. Governance indicators, however, are represented by red or green. The color is defined based on what literature shows to be a positive (green) or negative (red) factor for a reserve. However, due to the nature of some governance indicators, which require the user to provide a narrative, only some indicators are presented in the scorecard (although all are included in the techniical report).
+The first output is a color-coded scorecard intended to provide a general overview of the effectiveness of the reserve. The scorecard provides a global score for the reserve, a general score for each category of indicators, and an individual score for each indicator. The global and category-level scores are determined by the percentage of positive indicators, overall and for each category, respectively. For numeric biological indicators (all but B5), the color is defined by the sign of the interaction term coefficient ($\beta_2$) in eq. 1. For socioeconomic indicators, colors are assigned based on the direction of the slope ($\beta_1$). Red, yellow and green are used for $\beta_i<0$, $\beta_i = 0$, and $\beta_i>0$, respectively. The intensity of the color is defined by the significance of coefficient, testing the null hypothesis of no change (*i.e.* $H_0: \beta_i = 0$) with a Students t-test. Cutoff values are $p < 0.05$ and $p < 0.1$. Thus, even in a case where $\beta_i > 0$, if the coefficient is not significant (*i.e. * $p>0.1$), the indicator will be assigned a yellow color. A legend (Fig. 2) is provided within the scorecard to aid in the interpretation of these results. Governance indicators are represented simply by red or green. The color is defined based on what literature shows to be a negative (red) or positive (green) factor for a reserve. For example, if the perceived degree of illegal fishing is high, this is indicator will be assigned a red color. However, due to the nature of some governance indicators, which require the user to provide a narrative, only some indicators are presented in the scorecard (although all are included in the technical report).
 
 ![Legend used to interpret the scorecard produced by MAREA. Colors indicate direction of change, and color intensity is given by the statistical significance.](./Figures/legend2.gif)
 
-The second output from MAREA is a technical report, intended to communicate information and statystical results in a more formal and technical way. This report also includes a scorecard as a summary of the results, but provides more information for each indicator. For all numeric indicators, the report includes a graph of the value of the indicator, for the reserve and control sites, through time. It also provides a regression table that summarizes the value of all coefficients in the regression and their respective robust standard errors. The summary table also provides information on model fit ($R^2$) and significance of the regression.
+The second output from MAREA is a technical report intended to communicate information and statistical results in a more comprehensive and technical way. This report also includes a scorecard as a summary of the results, but provides more information for each indicator. For all numeric indicators, the report includes a graph of the value of the indicator, for both the reserve and control sites, through time. It also provides a regression table that summarizes the value of all coefficients in the regression and their respective robust standard errors. The summary table also provides information on model fit ($R^2$) and significance of the regression.
 
-The scorecard is produced with functions from the Shinydashboard package [@shinydashboard_2017]. The technical report is produced by a parameterized Rmarkdown document [@rmarkdown_2017] processed by the knitr package [@knitr_2017]. Another feature of MAREA is that the user can choose to share the data. Once the technical report is downloaded, information on the reserve, its management objectives, and all uploaded data is saved into a central repository. These data can be accessed at any time by any person interested in aquiring them.
+The scorecard is produced with functions from the Shinydashboard package [@shinydashboard_2017]. The technical report is produced by a parameterized Rmarkdown document [@rmarkdown_2017] processed by the knitr package [@knitr_2017]. Another feature of MAREA is that the user can choose to share the data. Once the technical report is downloaded, the information on the reserve, its management objectives, and all uploaded data is saved into a central repository. These data can be accessed at any time by any person interested in acquiring them at [github.com/turfeffect/MAREAdata](github.com/turfeffect/MAREAdata).
 
 ## Case study
 
